--- a/assets/css/main/productos.css
+++ b/assets/css/main/productos.css
@@ -20,3 +20,33 @@
   padding: 0.25rem;
   border-radius: 0.25rem;
 }
+
+.productos--card--container {
+  height: calc(100% - 4rem);
+  width: calc(100% - 3rem);
+  padding: 1rem 1.5rem 1rem 1.5rem;
+}
+.card--container {
+  width: 100%;
+  height: 13rem;
+  background-color: antiquewhite;
+}
+.card--container--titulo {
+  line-height: 1.5rem;
+}
+.card--container--interno {
+  height: calc(100% - 1.5rem);
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.card--producto {
+  width: 12rem;
+  height: 11.5rem;
+  margin: 0 2rem;
+  background-color: lightgoldenrodyellow;
+}
+
+.card--container--todos {
+  margin-top: 1rem;
+  height: 26rem;
+}
