--- a/assets/css/main/menu.css
+++ b/assets/css/main/menu.css
@@ -1,20 +1,40 @@
 .menu--container {
-  width: 10%;
-  height: 100%;
+  width: 100%;
+  height: 3.5rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  /* border: 1px solid red; */
+  overflow: hidden;
 }
 .menu--ul {
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: space-around;
-  align-items: end;
-  padding: 3rem 0;
+  align-items: start;
+  padding-top: 1rem;
   width: 100%;
-  height: calc(100% - 6rem);
+  height: 2.5rem;
+  background-color: lightpink;
 }
 .menu--li {
-  text-align: end;
+  text-align: center;
   width: calc(100% - 1rem);
-  padding: 1rem 0.5rem;
-  background-color: lightpink;
-  border-top-left-radius: 1.5rem;
-  border-bottom-left-radius: 1.5rem;
+  padding: 0.5rem 0.5rem;
+  border: 1.5px solid salmon;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+.menu--li__buscar {
+  padding: 0.25rem;
+  border: none;
+}
+.li__selecionado {
+  border-bottom: none;
+  background-color: antiquewhite;
+  height: 1.25rem;
+}
+.menu--buscar {
+  border: none;
+  outline: none;
+  border-radius: 0.25rem;
+  padding: 0.25rem;
 }
