--- a/assets/css/main/productos.css
+++ b/assets/css/main/productos.css
@@ -1,52 +1,35 @@
 .productos--container {
-  width: 90%;
-  height: calc(100% - 3.5rem);
-  padding: 0.5rem 0 1rem 0;
+  width: 100%;
+  height: calc(100% - 2.5rem);
+  padding: 0 0 1rem 0;
   background-color: lightpink;
-  border-radius: 1rem;
+  /* border-radius: 1rem; */
 }
-
-.productos--buscador {
-  width: 50%;
-  height: 2rem;
-  align-items: start;
-  justify-content: start;
-  padding-left: 2rem;
-}
-.buscador--text {
-  text-decoration: none;
-  outline: none;
-  border: none;
-  padding: 0.25rem;
-  border-radius: 0.25rem;
-}
-
 .productos--card--container {
-  height: calc(100% - 4rem);
+  height: 100%;
   width: calc(100% - 3rem);
-  padding: 1rem 1.5rem 1rem 1.5rem;
+  padding: 0 1.5rem 1rem 1.5rem;
 }
 .card--container {
   width: 100%;
-  height: 13rem;
+  /* height: 13rem; */
   background-color: antiquewhite;
 }
 .card--container--titulo {
   line-height: 1.5rem;
 }
 .card--container--interno {
-  height: calc(100% - 1.5rem);
+  /* height: calc(100% - 1.5rem); */
   justify-content: space-around;
   flex-wrap: wrap;
 }
 .card--producto {
   width: 12rem;
   height: 11.5rem;
-  margin: 0 2rem;
+  margin: 1rem;
   background-color: lightgoldenrodyellow;
 }
 
 .card--container--todos {
-  margin-top: 1rem;
   height: 26rem;
 }
