--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,21 @@
+* {
+  text-decoration: none;
+}
+
 body {
   width: 100%;
   height: 100vh;
-}
-
-.container {
-  width: calc(100% - 6rem);
-  padding: 0 3rem;
+  background-color: lightsalmon;
 }
 
 .flex {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+main {
+  padding-top: 6rem;
+  height: calc(100vh - 6rem);
+  width: 100%;
 }
