nav y slider configurado

--- a/assets/css/header/nav.css
+++ b/assets/css/header/nav.css
@@ -52,7 +52,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: rgb(219, 168, 205, 0.6);
+  background-color: rgb(219, 168, 205, 0.9);
   padding: 1rem 1rem;
   border-top-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
@@ -63,6 +63,10 @@
   max-width: 0;
   overflow: hidden;
 }
+.li--secuntadio {
+  z-index: 10;
+}
+
 .header--li__2:hover {
   transition: all 0.5s;
   max-height: 1.9rem;
