--- a/assets/css/main/slider.css
+++ b/assets/css/main/slider.css
@@ -4,9 +4,69 @@
   padding: 0rem 4rem;
 }
 .slider--container--div {
+  position: relative;
+  z-index: -1;
   width: 100%;
   height: 100%;
-  background-image: url(../../img/facha.jpg);
+  overflow: hidden;
+  border-radius: 1rem;
   border: 2px solid black;
   box-sizing: border-box;
+}
+.slider--ul {
+  width: 300%;
+  height: 100%;
+  animation: slider 20s infinite both alternate linear;
+}
+.slider--li {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.slider__li1 {
+  background-image: url(../../img/slider.jpg);
+}
+.slider__li2 {
+  background-image: url(../../img/slider1.jpg);
+}
+.slider__li3 {
+  background-image: url(../../img/slider2.jpg);
+}
+
+.slider--selector {
+  position: absolute;
+  justify-content: space-between;
+  bottom: 1rem;
+  width: 8rem;
+  height: 2rem;
+  left: calc(50% - 4rem);
+}
+.slider--a {
+  border-radius: 1.25rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: rgb(117, 204, 206, 0.5);
+}
+
+@keyframes slider {
+  0% {
+    margin-left: 0;
+  }
+  25% {
+    margin-left: 0;
+  }
+  33% {
+    margin-left: -100%;
+  }
+  58% {
+    margin-left: -100%;
+  }
+  66% {
+    margin-left: -200%;
+  }
+  100% {
+    margin-left: -200%;
+  }
 }
