--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,40 @@
 * {
   text-decoration: none;
+  font-family: "Quicksand", sans-serif;
 }
 
 body {
   width: 100%;
   height: 100vh;
-  background-color: lightsalmon;
-}
-
-.flex {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 main {
   padding-top: 6rem;
   height: calc(100vh - 6rem);
   width: 100%;
+}
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.p1 {
+  color: white;
+  font-size: 1.1rem;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+}
+.p2 {
+  color: white;
+  font-family: "Quicksand", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 500;
+  line-height: 1.25rem;
+}
+
+.p3 {
+  color: white;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
 }
