--- a/assets/css/main/productos.css
+++ b/assets/css/main/productos.css
@@ -2,19 +2,22 @@
   width: calc(100% - 8rem);
   height: calc(100vh - 6rem);
   padding: 0rem 4rem;
+  display: none;
 }
 .productos--container--div {
   width: 100%;
   height: 100%;
-  border: 1px solid black;
 }
+
 .productos--selector {
   height: 100%;
   width: 13%;
   flex-direction: column;
 }
-
 .productos--lista {
   width: 87%;
   height: 100%;
+}
+.producto--titulo {
+  color: rgb(139, 37, 112);
 }
