--- a/assets/css/main/slider.css
+++ b/assets/css/main/slider.css
@@ -3,6 +3,8 @@
   width: calc(100% - 8rem);
   height: calc(100vh - 6rem);
   padding: 0rem 4rem;
+  max-width: 100%;
+  max-height: 100%;
 }
 .slider--container--div {
   position: relative;
@@ -11,7 +13,6 @@
   height: 100%;
   overflow: hidden;
   border-radius: 1rem;
-  border: 2px solid black;
   box-sizing: border-box;
 }
 .slider--ul {
