--- a/assets/css/footer/footer.css
+++ b/assets/css/footer/footer.css
@@ -1,18 +1,21 @@
 .footer--container {
   position: relative;
+  z-index: -1;
+  flex-direction: column;
   width: calc(100% - 8rem);
-  height: calc(100vh - 7rem);
-  padding: 6rem 4rem 2rem 4rem;
+  height: calc(100vh - 6rem);
+  padding: 6rem 4rem 0 4rem;
   max-width: 100%;
   max-height: 100%;
 }
-
 .contacto--footer {
-  position: absolute;
-  top: 8rem;
-  left: calc(50% - 6rem);
+  text-align: center;
+  height: 3rem;
 }
-
+.contacto--container--div {
+  width: 100%;
+  height: calc(100% - 3rem);
+}
 .contacto--izq {
   flex-direction: column;
   align-items: flex-end;
@@ -22,9 +25,19 @@
 }
 .contacto--pedidos {
   flex-direction: column;
-  width: 70%;
+  width: 75%;
   max-width: 600px;
   height: 25%;
+}
+.contactos--google {
+  max-width: 600px;
+  max-height: 450px;
+  height: 75%;
+  width: 100%;
+}
+.contactos--iframe {
+  width: 100%;
+  height: 100%;
 }
 
 .contacto--der {
@@ -35,14 +48,39 @@
   height: 100%;
 }
 .contacto--redes {
-  width: 100%;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 50%;
   height: 25%;
+}
+.contacto--container--a {
+  width: 100%;
+  justify-content: space-around;
+}
+.contactos--a {
+  display: flex;
+  width: 7rem;
+  height: 7rem;
+  background-size: cover;
+}
+.contactos--a__insta {
+  background-image: url(../../img/logo\ istagram.png);
+}
+.contactos--a__what {
+  width: 5rem;
+  height: 5rem;
+  background-image: url(../../img/logowhat.png);
+}
+.contactos--a__mail {
+  width: 6rem;
+  height: 4.5rem;
+  background-image: url(../../img/logomail.png);
 }
 .contacto--datos {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 45%;
+  width: 50%;
   height: 54%;
 }
 .contacto--div--formulario {
