--- a/assets/css/footer/footer.css
+++ b/assets/css/footer/footer.css
@@ -4,9 +4,9 @@
   flex-direction: column;
   width: calc(100% - 8rem);
   height: calc(100vh - 6rem);
-  padding: 6rem 4rem 0 4rem;
-  max-width: 100%;
+  padding: 0 4rem 0 4rem;
   max-height: 100%;
+  transition: all 0.5s;
 }
 .contacto--footer {
   text-align: center;
