--- a/assets/css/main/quienes.css
+++ b/assets/css/main/quienes.css
@@ -1,12 +1,11 @@
 .quienes--container {
-  display: none;
   position: relative;
   z-index: -1;
   width: calc(100% - 8rem);
   height: calc(100vh - 6rem);
   padding: 0rem 4rem;
-  max-width: 100%;
-  max-height: 100%;
+  max-height: calc(100vh - 6rem);
+  transition: all 0.5s;
 }
 .quienes--container--div {
   flex-direction: column;
