--- a/assets/css/main/slider.css
+++ b/assets/css/main/slider.css
@@ -1,10 +1,11 @@
 .slider--container {
-  display: none;
+  visibility: visible;
   width: calc(100% - 8rem);
   height: calc(100vh - 6rem);
   padding: 0rem 4rem;
   max-width: 100%;
   max-height: 100%;
+  transition: all 0.5s;
 }
 .slider--container--div {
   position: relative;
