--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@ body {
 }
 
 main {
-  display: none;
   padding-top: 6rem;
   height: calc(100vh - 6rem);
   width: 100%;
@@ -21,6 +20,10 @@ header,
 main,
 footer {
   opacity: 0;
+}
+.main--container {
+  position: relative;
+  z-index: -1;
 }
 
 .flex {
