--- a/assets/css/footer/footer.css
+++ b/assets/css/footer/footer.css
@@ -1,11 +1,9 @@
 .footer--container {
-  position: relative;
-  z-index: -1;
   flex-direction: column;
   width: calc(100% - 8rem);
   height: calc(100vh - 6rem);
   padding: 0 4rem 0 4rem;
-  max-height: 100%;
+  max-height: 0px;
   transition: all 0.5s;
 }
 .contacto--footer {
