--- a/assets/css/main/productos.css
+++ b/assets/css/main/productos.css
@@ -2,7 +2,7 @@
   width: calc(100% - 8rem);
   height: calc(100vh - 6rem);
   padding: 0rem 4rem;
-  max-height: calc(100vh - 6rem);
+  max-height: 0px;
   transition: all 0.5s;
 }
 .productos--container--div {
