--- a/assets/css/main/slider.css
+++ b/assets/css/main/slider.css
@@ -4,7 +4,7 @@
   height: calc(100vh - 6rem);
   padding: 0rem 4rem;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 0px;
   transition: all 0.5s;
 }
 .slider--container--div {
