--- a/assets/css/main/productos-lista.css
+++ b/assets/css/main/productos-lista.css
@@ -1,11 +1,10 @@
 .lista--container {
   width: 100%;
   height: 100%;
-  /* max-width: 0; */
   justify-content: space-around;
   flex-wrap: wrap;
   overflow: scroll;
-  box-shadow: inset 0 0 10px rgb(219, 168, 205);
+  overflow-x: hidden;
 }
 
 .producto--item--container {
