--- a/assets/css/main/productos-lista.css
+++ b/assets/css/main/productos-lista.css
@@ -1,4 +1,4 @@
-.lista--container {
+.card--container {
   width: 100%;
   height: 100%;
   justify-content: space-around;
@@ -7,24 +7,29 @@
   overflow-x: hidden;
 }
 
-.producto--item--container {
+.card--item {
   flex-direction: column;
   justify-content: space-between;
   width: 19rem;
-  height: 22rem;
+  height: 23rem;
   padding: 1rem;
 }
-.producto--img {
+.card--img--div {
   align-items: flex-end;
-  background-image: url(../../img/leon.jpg);
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
   width: 100%;
   height: calc(100% - 3rem);
   text-align: center;
-  border-radius: 0.5rem;
 }
-.producto--titulo {
+.card--img {
+  border-radius: 0.5rem;
+  width: 100%;
+  height: 100%;
+}
+.card--titulo {
+  color: #000000;
   line-height: 1.5rem;
+}
+.card--categoria--div {
+  justify-content: space-around;
+  width: 100%;
 }
