--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ footer {
   color: #000000;
   font-family: "Quicksand", sans-serif;
   font-size: 0.9rem;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.25rem;
 }
 
@@ -66,4 +66,11 @@ footer {
   font-size: 1.5rem;
   font-weight: 600;
   line-height: 2rem;
+}
+.p6 {
+  color: #000000;
+  font-family: "Quicksand", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 500;
+  line-height: 1.25rem;
 }
