--- a/assets/css/CssApp/productosEfects.css
+++ b/assets/css/CssApp/productosEfects.css
@@ -10,16 +10,30 @@
 }
 
 .selecColor0 {
+  transition: all 0.5s;
+  background-color: rgb(219, 168, 205, 0.8);
 }
 .selecColor1 {
+  transition: all 0.5s;
+  background-color: rgb(234, 95, 60, 0.8);
 }
 .selecColor2 {
+  transition: all 0.5s;
+  background-color: rgb(208, 234, 221, 0.8);
 }
 .selecColor3 {
+  transition: all 0.5s;
+  background-color: rgb(117, 204, 206, 0.8);
 }
 .selecColor4 {
+  transition: all 0.5s;
+  background-color: rgb(249, 194, 210, 0.8);
 }
 .selecColor5 {
+  transition: all 0.5s;
+  background-color: rgb(248, 209, 50, 0.8);
 }
 .selecColor6 {
+  transition: all 0.5s;
+  background-color: rgb(219, 168, 205, 0.8);
 }
