--- a/assets/css/main/productos-lista.css
+++ b/assets/css/main/productos-lista.css
@@ -8,12 +8,15 @@
 }
 
 .card--item {
+  position: relative;
+  z-index: 1;
   flex-direction: column;
   justify-content: space-between;
   width: 19rem;
   height: 23rem;
   padding: 1rem;
 }
+
 .card--img--div {
   align-items: flex-end;
   width: 100%;
@@ -32,4 +35,33 @@
 .card--categoria--div {
   justify-content: space-around;
   width: 100%;
+}
+
+.card--emergente {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(255, 255, 255, 0.3);
+  width: 100%;
+  height: 100vh;
+}
+.emergente--container {
+  background-color: rgb(255, 255, 255, 0.9);
+  border-radius: 1rem;
+  top: calc(50% - 17.5rem);
+  left: calc(50% - 25rem);
+  width: 60rem;
+  height: 30rem;
+}
+.emergente--img {
+  border-radius: 1rem;
+  width: 30rem;
+  height: 30rem;
+}
+.emergente--div {
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-around;
 }
