--- a/assets/css/main/productos-lista.css
+++ b/assets/css/main/productos-lista.css
@@ -8,8 +8,6 @@
 }
 
 .card--item {
-  position: relative;
-  z-index: 1;
   flex-direction: column;
   justify-content: space-between;
   width: 19rem;
@@ -38,30 +36,64 @@
 }
 
 .card--emergente {
-  display: none;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 0;
-  background-color: rgb(255, 255, 255, 0.3);
+  background-color: rgb(255, 255, 255, 0.5);
   width: 100%;
   height: 100vh;
 }
 .emergente--container {
+  position: relative;
+  justify-content: space-between;
   background-color: rgb(255, 255, 255, 0.9);
   border-radius: 1rem;
-  top: calc(50% - 17.5rem);
-  left: calc(50% - 25rem);
   width: 60rem;
   height: 30rem;
+  max-width: 60rem;
+  max-height: 30rem;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.75);
 }
 .emergente--img {
+  max-width: 0;
+  max-height: 0;
+  opacity: 1;
   border-radius: 1rem;
   width: 30rem;
   height: 30rem;
 }
 .emergente--div {
-  height: 100%;
+  overflow: hidden;
+  max-width: 0;
+  max-height: 0;
+  height: calc(30rem - 3rem);
+  width: calc(30rem - 3rem);
   flex-direction: column;
   justify-content: space-around;
+  padding: 1.5rem;
+}
+.emergente--div--interno {
+  flex-direction: column;
+  justify-content: space-between;
+  height: 5rem;
+}
+
+.emergente--titulo {
+  color: #000000;
+}
+
+.emergente--salir {
+  position: absolute;
+  left: calc(50% - 2rem);
+  bottom: -4rem;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 1.5rem;
+  border: none;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.75);
+}
+.salir--interior {
+  width: 3rem;
+  height: 3rem;
 }
