Preparado para conectar a firebase

--- a/assets/css/CssApp/buscar.css
+++ b/assets/css/CssApp/buscar.css
@@ -18,6 +18,7 @@
   background-color: #f3f3f4;
   color: #0d0c22;
   transition: 0.3s ease;
+  animation: infinite reverse;
 }
 
 .input::placeholder {
