--- a/assets/css/main/productos.css
+++ b/assets/css/main/productos.css
@@ -23,3 +23,16 @@
 .producto--titulo {
   color: rgb(139, 37, 112);
 }
+
+@media (max-width: 1024px) {
+  .productos--container {
+    width: calc(100% - 4rem);
+    padding: 0rem 2rem;
+  }
+  .productos--selector {
+    width: 20%;
+  }
+  .productos--lista {
+    width: 80%;
+  }
+}
