--- a/assets/css/CssApp/buscar.css
+++ b/assets/css/CssApp/buscar.css
@@ -3,13 +3,13 @@
   line-height: 28px;
   align-items: center;
   position: relative;
-  max-width: 190px;
+  max-width: 200px;
 }
 
 .input {
   width: 100%;
-  height: 40px;
-  line-height: 28px;
+  height: 2.5rem;
+  line-height: 1.75rem;
   padding: 0 1rem;
   padding-left: 2.5rem;
   border: 2px solid transparent;
@@ -39,4 +39,12 @@ input:hover {
   fill: #9e9ea7;
   width: 1rem;
   height: 1rem;
+}
+
+@media (max-width: 767px) {
+  .header--buscador {
+    display: none;
+    max-width: 90%;
+    width: 90%;
+  }
 }
