--- a/assets/css/CssApp/navEfects.css
+++ b/assets/css/CssApp/navEfects.css
@@ -3,6 +3,10 @@
   max-height: 100%;
 }
 
+.mostrar {
+  display: flex;
+}
+
 .ocultar {
   transition: all 0.5s;
   max-height: 0;
@@ -10,4 +14,31 @@
 
 .ocultar2 {
   display: none;
+}
+
+.oculta__w {
+  transition: all 0.5s;
+  max-width: 0;
+}
+
+.mostar__menu__w {
+  transition: all 0.25s;
+  flex-direction: column;
+  max-width: 100%;
+  width: 100%;
+  justify-content: flex-start;
+}
+
+.mostar__menu__h {
+  position: absolute;
+  top: 0.25rem;
+  left: 0;
+  transition: all 0.5s;
+  max-height: 24rem;
+  height: 24rem;
+}
+
+.mostrar__nav {
+  display: flex;
+  flex-direction: column;
 }
