--- a/assets/css/footer/footer.css
+++ b/assets/css/footer/footer.css
@@ -28,8 +28,8 @@
   height: 25%;
 }
 .contactos--google {
-  max-width: 600px;
-  max-height: 450px;
+  max-width: 37.5rem;
+  max-height: 28.1rem;
   height: 75%;
   width: 100%;
 }
@@ -48,7 +48,7 @@
 .contacto--redes {
   flex-direction: column;
   justify-content: space-around;
-  width: 50%;
+  width: 65%;
   height: 25%;
 }
 .contacto--container--a {
@@ -78,7 +78,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 50%;
+  width: 65%;
   height: 54%;
 }
 .contacto--div--formulario {
@@ -242,4 +242,53 @@
 .input--asunto:valid + .lbl--asunto .text--asunto {
   transform: translateY(0%);
   font-weight: 500;
+}
+
+@media (max-width: 1440px) {
+  .contacto--pedidos {
+    width: 80%;
+  }
+  .contacto--redes {
+    width: 80%;
+  }
+  .contacto--datos {
+    width: 80%;
+  }
+  .contacto--formulario {
+    align-items: center;
+  }
+  .contacto--textarea {
+    width: 75%;
+  }
+  .contacto--button {
+    width: 80%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .contacto--izq {
+    justify-content: space-around;
+  }
+  .contacto--pedidos {
+    width: 100%;
+    margin-top: 5rem;
+  }
+  .contactos--google {
+    margin-bottom: 5rem;
+  }
+  .contacto--redes {
+    width: 100%;
+  }
+  .contacto--datos {
+    width: 100%;
+  }
+  .contacto--formulario {
+    align-items: center;
+  }
+  .contacto--textarea {
+    width: 95%;
+  }
+  .contacto--button {
+    width: 100%;
+  }
 }
