--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -9,7 +9,6 @@
   padding: 0rem 4rem;
   padding-top: 1rem;
   background-color: #ffffff;
-  box-shadow: 0 10px 10px lightpink inset;
 }
 
 .header--container--div {
@@ -27,13 +26,17 @@
   background-image: url(../../img/memydeni.jpg);
   background-size: contain;
   background-repeat: no-repeat;
-  width: 90%;
-  height: 70%;
+  width: 100%;
+  height: 80%;
+}
+.header--menu {
+  width: 75%;
+  justify-content: space-around;
 }
 
 /*-----------------Buscador-------------*/
 .header--buscador {
-  width: 15%;
+  width: 23%;
   height: calc(100% - 1rem);
   padding-top: 1rem;
 }
@@ -48,7 +51,50 @@
 }
 
 .header--login {
+  display: none;
   width: 5%;
   height: calc(100% - 1rem);
   padding-top: 1rem;
+}
+.btn--login {
+  width: 2.25rem;
+  height: 2.25rem;
+  border-radius: 1.125rem;
+  border: none;
+}
+
+@media (max-width: 1024px) {
+  .header--container {
+    width: calc(100% - 1rem);
+    padding: 0rem 0.5rem;
+  }
+  .header--logo {
+    width: 17%;
+    height: 100%;
+  }
+  .header--logo1 {
+    height: 30%;
+  }
+  .header--menu {
+    width: 83%;
+  }
+}
+@media (max-width: 767px) {
+  .header--logo {
+    max-width: 75%;
+    width: 75%;
+    transition: all 0.5s;
+  }
+  .header--logo1 {
+    height: 55%;
+  }
+  .header--buscador {
+    display: none;
+  }
+  .header--menu {
+    max-width: 25%;
+    width: 25%;
+    height: 3rem;
+    max-height: 3rem;
+  }
 }
