--- a/assets/css/header/nav.css
+++ b/assets/css/header/nav.css
@@ -1,5 +1,5 @@
 .header--container--nav {
-  width: 55%;
+  width: 75%;
   height: 100%;
 }
 .header--nav {
@@ -12,7 +12,6 @@
   align-items: flex-start;
   width: 100%;
   height: 100%;
-  padding-top: 2rem;
 }
 .header--li {
   padding: 0.5rem 1.5rem;
@@ -88,4 +87,34 @@
 }
 .a--secundario:hover {
   text-shadow: 1px 1px 3px #000000;
+}
+
+@media (max-width: 1024px) {
+  .header--li {
+    padding: 0.5rem 1rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .header--container--nav {
+    display: none;
+    width: calc(100% - 1rem);
+  }
+  .header--ul {
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(245, 245, 245, 0.8);
+  }
+  .header--li {
+    border-radius: 0;
+    padding: 1.5rem 0;
+    width: 100%;
+  }
+  .ul--secundario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(100% - 2rem);
+    padding-top: 2.5rem;
+  }
 }
