--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,3 +71,24 @@ footer {
   font-weight: 500;
   line-height: 1.25rem;
 }
+
+@media (max-width: 1680px) {
+  html {
+    font-size: 15px;
+  }
+}
+@media (max-width: 1440px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media (max-width: 1280px) {
+  html {
+    font-size: 13px;
+  }
+}
+@media (max-width: 1024px) {
+  html {
+    font-size: 12px;
+  }
+}
