--- a/assets/css/CssApp/menu.css
+++ b/assets/css/CssApp/menu.css
@@ -5,7 +5,10 @@ input[type="checkbox"] {
 
 .bar {
   display: none;
-  position: relative;
+  position: absolute;
+  top: 1.25rem;
+  right: calc(15% - 3rem);
+  z-index: 10;
   cursor: pointer;
   width: 3rem;
   height: 2.75rem;
@@ -16,7 +19,7 @@ input[type="checkbox"] {
   position: absolute;
   width: 3rem;
   height: 7px;
-  background: rgb(219, 168, 205, 0.85);
+  background: rgb(249, 194, 210);
   border-radius: 100px;
   display: inline-block;
   transition: 0.3s ease;
@@ -62,4 +65,8 @@ input[type]:checked .header--logo {
   .bar {
     display: flex;
   }
+}
+
+.menu--btn__medio {
+  right: calc(50% - 2rem);
 }
