--- a/assets/css/footer/footer.css
+++ b/assets/css/footer/footer.css
@@ -292,3 +292,33 @@
     width: 100%;
   }
 }
+
+@media (max-width: 768px) {
+  .contacto--container--div {
+    flex-direction: column;
+  }
+  .contacto--datos {
+    display: none;
+  }
+  .contacto--izq {
+    width: 100%;
+    padding-right: 0;
+  }
+  .contacto--pedidos {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    height: 15rem;
+  }
+  .contactos--google {
+    margin-bottom: 0;
+  }
+  .contacto--der {
+    width: 100%;
+    padding-left: 0;
+    height: 25rem;
+  }
+  .contacto--redes {
+    height: 100%;
+    justify-content: center;
+  }
+}
