panel admin renderizado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+html {
+  text-decoration: none;
+  font-family: "Quicksand", sans-serif;
+}
 * {
   text-decoration: none;
   font-family: "Quicksand", sans-serif;
