--- a/assets/css/main/productos-admin.css
+++ b/assets/css/main/productos-admin.css
@@ -1,4 +1,5 @@
 .main--admin {
+  position: relative;
   opacity: 1;
   width: calc(100% - 4rem);
   height: calc(100vh - 5.5rem);
@@ -43,6 +44,7 @@
   border-radius: 0.5rem;
   height: 2rem;
   width: 2rem;
+  cursor: pointer;
 }
 
 .admin--btn__edit {
